--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body> 
@@ -14,7 +15,7 @@
     </h1>
     <nav>
         <!-- Unordered list element -->
-        <u1>
+        <ul>
             <!-- List item element -->
             <li>
                 <!-- Anchor element -->
@@ -29,7 +30,7 @@
             <li>
                 <a href="#reach-out">Reach Out</a>
             </li>
-        </u1>
+        </ul>
     </nav>
   </header>
 
