--- a/index.html
+++ b/index.html
@@ -104,8 +104,40 @@
   </section>
 
   <!-- "meet the trainers" section -->
-  <section>
-    <h2>Meet The Trainers</h2>
+  <section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
+    <article class="trainer">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis placeat nulla blanditiis fuga accusantium exercitationem voluptatem doloremque, repudiandae quam molestias sequi sunt, iste esse itaque recusandae mollitia illum qui cumque.
+        </p>
+      </div>
+    </article>
+    <!-- second trainer bio -->
+    <article class="trainer">
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis placeat nulla blanditiis fuga accusantium exercitationem voluptatem doloremque, repudiandae quam molestias sequi sunt, iste esse itaque recusandae mollitia illum qui cumque.
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
+    <!-- third trainer bio -->
+    <article class="trainer">
+      <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "The Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis placeat nulla blanditiis fuga accusantium exercitationem voluptatem doloremque, repudiandae quam molestias sequi sunt, iste esse itaque recusandae mollitia illum qui cumque.
+        </p>
+      </div>
+    </article>
   </section>
 
   <!-- "reach out" section -->
