--- a/index.html
+++ b/index.html
@@ -141,12 +141,10 @@
   </section>
 
   <!-- "reach out" section -->
-  <section>
-    <h2>Reach Out</h2>
+  <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d506249.3802273719!2d177.3244894210632!3d-7.567016279118565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6fc19cb959b1a04d%3A0x8f6754680707122e!2sTuvalu!5e0!3m2!1sen!2sus!4v1653591591747!5m2!1sen!2sus" 
-       width="400" 
-       height="400" 
        style="border:0;" 
        allowfullscreen="" 
        loading="lazy" 
