add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
+      <div class="hero-cta">
+        <h2>Start Building Habits.</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam nihil earum officiis modi, eum dolorum iste vitae. Soluta, illum harum nam culpa vero delectus blanditiis et, labore natus nisi beatae.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius molestias molestiae facere id itaque iste. Minus maxime, veritatis sapiente odit temporibus odio natus laboriosam commodi dolore ipsa. Harum, alias magni!
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate tempora dolor quis optio praesentium beatae debitis impedit eligendi. Sed fuga doloremque est a saepe dolorem magnam corrupti amet hic deleniti?
+        </p>
+      </div>
       <div class="hero-form">
           <h3>Get Started Today</h3>
           <p>Fill out this form and one of our trainers will schedule a consult</p>
